--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@material-ui/icons": "^4.9.1",
