--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/cli": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@types/react": "^16.9.36",
     "babel-loader": "^8.1.0",
     "lerna": "^3.22.1",
     "react": "^16.13.1",
