--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "private": true,
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/plugin-transform-react-constant-elements": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
-    "@material-ui/icons": "^4.9.1",
     "@storybook/addon-docs": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/cli": "^5.3.19",
     "@storybook/react": "^5.3.19",
-    "@types/react": "^16.9.36",
     "babel-loader": "^8.1.0",
+    "storybook-readme": "^5.0.8"
+  },
+  "dependencies": {
+    "@material-ui/icons": "^4.9.1",
+    "@types/react": "^16.9.36",
     "lerna": "^3.22.1",
     "react": "^16.13.1",
-    "storybook-readme": "^5.0.8",
+    "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
