--- a/packages/cbp-design-system/package.json
+++ b/packages/cbp-design-system/package.json
@@ -1,22 +1,17 @@
 {
-    "name": "@cbp/cbp-design-system",
-    "version": "0.0.22",
-    "main": "lib/index.js",
-    "module": "src/index.js",
-    "dependencies": {
-        "microbundle": "^0.12.0",
-        "react": "latest",
-        "react-dom": "latest"
-    },
-    "peerDependencies": {
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0"
-    },
-    "devDependencies": {
-        "@emotion/core": "^10.0.28",
-        "@material-ui/core": "^4.9.12"
-    },
-    "scripts": {
-        "build": "webpack -p --config ../../webpack.config.js"
-    }
+  "name": "@cbp/cbp-design-system",
+  "version": "0.0.22",
+  "main": "lib/index.js",
+  "module": "dist/index.js",
+  "dependencies": {
+    "react": "latest",
+    "react-dom": "latest"
+  },
+  "devDependencies": {
+    "@emotion/core": "^10.0.28",
+    "@material-ui/core": "^4.9.12"
+  },
+  "scripts": {
+    "build": "webpack -p --config ../../webpack.config.js"
+  }
 }
